--- a/drivers/net/wireless/qualcomm/wcn39xx/qcacld-3.0/configs/default_defconfig
+++ b/drivers/net/wireless/qualcomm/wcn39xx/qcacld-3.0/configs/default_defconfig
@@ -1065,3 +1065,5 @@ CONFIG_WLAN_HANG_EVENT := y
 
 #Enable VDEV Response wakelock feature
 CONFIG_FEATURE_VDEV_RSP_WAKELOCK := y
+
+CONFIG_ENABLE_SIZE_OPTIMIZE := y
