--- a/drivers/block/zram/Kconfig
+++ b/drivers/block/zram/Kconfig
@@ -57,10 +57,9 @@ config ZRAM_MEMORY_TRACKING
 config ZRAM_LRU_WRITEBACK
 	bool
 	depends on ZRAM_WRITEBACK
-	default y
+	default n
 	help
 	  This feature supports zram lru-based writeback (SQZR).
-
 config ZRAM_LRU_WRITEBACK_LIMIT
 	int "Limit zram lru writeback"
 	default 1024
